--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -19,6 +19,8 @@ jobs:
     name: Upgrade
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
       - name: Upgrade
         id: upgrade
         shell: bash
