--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -18,6 +18,7 @@ jobs:
   upgrade:
     name: Upgrade
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
