--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,8 +2,8 @@ name: Test-Release
 run-name: Release ${{ github.ref_name }}
 on:
   push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+    #tags:
+    #  - '[0-9]+.[0-9]+.[0-9]+'
   workflow_call:
   workflow_dispatch:
 
