--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,9 +1,12 @@
 name: Test-Release
 run-name: Release ${{ github.ref_name }}
 on:
-  push:
-    #tags:
-    #  - '[0-9]+.[0-9]+.[0-9]+'
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   workflow_call:
   workflow_dispatch:
 
